# td-model-utils

./: .air.toml  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  go.mod  go.sum  tailwind.config.js
.github/workflows/: CI.yaml
cmd/: BUILD.bazel  main.go
env/: BUILD.bazel  env.go
handlers/: BUILD.bazel  home_handler.go  model_handler.go
static/: BUILD  styles.css
views/: BUILD.bazel  manual.templ  manual_templ.go  wrapper.templ  wrapper_templ.go
