"""Tracker Detector"""
module(name="tracker-detector", version="0.0.1")
bazel_dep(name = "rules_go", version = "0.45.1")
bazel_dep(name = "gazelle", version = "0.35.0")

bazel_dep(name = "aspect_bazel_lib", version = "1.36.0")
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_oci", version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "0.7.0")

VERSION = "0.0.1"

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = ":go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_a_h_templ",
    "com_github_gofiber_fiber_v2",
)

# Go docker image
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "alpine_base",
    digest = "sha256:c5b1261d6d3e43071626931fc004f70149baeba2c8ec672bd4f27761f8e1ad6b",
    image = "alpine",
    platforms = {
        "linux/amd64" : "amd64",
        "linux/arm64/v8": "arm64v8",
    },
)

use_repo(oci, "alpine_base")


